tomorrow i will complete this web site and hosted

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,10 @@
     integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+ 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="app.js" defer ></script>
 </head>
 
 <body>
@@ -90,9 +93,12 @@
             <a class="nav-link" href="#Review">Review</a>
           </li>
         </ul>
+        
         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#exampleModal">
           Book Now
         </button>
+    <i class="bi bi-brightness-high-fill" id="modedarki"></i>
+
         <!-- <button type="button" class="btn btn-dark"> <a href="">SignUp</a> </button> -->
       </div>
     </div>
@@ -358,7 +364,7 @@
   <br>
   <br>
   <!-- <<<<<Contact>>>> -->
-  <section style="border: 2px solied red ; background-color: rgba(95, 60, 5, 0.348); ">
+  <section  id="contact_Me" style="border: 2px solied red ; background-color: rgba(95, 60, 5, 0.348); background-color: lightyellow; border: 1px solid white;  "   >
     <div class="container">
       <div class="content">
         <div class="left-side">
@@ -383,8 +389,8 @@
           </div>
         </div>
         <div class="right-side">
-          <div class="topic-text">Please Send your valuable Feed Back</div>
-          <p>If you have any Problem about us so please contact us and send a feedback us about like COFFEE text or any
+          <div class="topic-text  ">Please Send your valuable Feed Back</div>
+          <p style="color:rgb(68, 44, 5);">If you have any Problem about us so please contact us and send a feedback us about like COFFEE text or any
             types of quries related to my COFFE HOUSE, you can send me message from here. It's my pleasure to help you .
           </p>
           <form action="https://formspree.io/f/xzblpbaq" method="POST">
